Use HTTP API v2.